--- a/知识笔记.md
+++ b/知识笔记.md
@@ -1,4 +1,4 @@
-# 道理
+# 知识笔记
 
 ## 知识管理
 
@@ -205,7 +205,7 @@
 #### 1、提高检索的效率
 
 > 通多对信息进行分类整理。
-在美团里，单击顶部的分类图标，就可以聚焦信息。
+> 在美团里，单击顶部的分类图标，就可以聚焦信息。
 
 #### 2、降低信息检索的门槛
 
@@ -450,16 +450,19 @@
 1. 目标需求清晰
 
    > 小学、初中、高中的时候，学习目标、教学大纲非常清晰，都是固定的科目：语数英、物理、化学、生物、地理、历史政治。
+   >
    > 按照教学大纲一步步的学习即可。
 
 2. 输入简单，被动思考
 
    > 学生不同思考要学什么，按照老师教的、书上写的，被动的填鸭式的学习。
+   >
    > 不需要动脑思考的问题，都是简单的体力劳动，实现起来难度不大。
 
 3. 输出标准明确，努力方向清晰且单一
 
    > 无论什么年代，什么地方，上学的输出结果明确、非常统一，就是高考！
+   >
    > 努力的方向也非常清晰，尽可能掌握固定科目的所有内容，正确回答试卷中的问题。
 
 需要掌握的能力
@@ -476,11 +479,13 @@
 2. 输入困难，资源较少
 
    > 从小学到高中，有9年的时间，学习的都是相关的科目，语数英、物理、化学、地理。2022年全国的中小学生共计月1亿人，各种学习资料，琳琅满目。
+   >
    > 大学只有4年，2022年大学毕业生1000万人，学习的科目从来都没接触过，都是细分的领域，资源相对也少很多，学习难度也难度大一些。
 
 3. 输出标准明确，但是方向更多
 
    > 考试、毕业依然是大学生最基本的目标。也是最简单、最单一的目标。
+   >
    > 相比中小学，大学毕业的下一个阶段，会有不同的努力方向。
 
    1. 考研，考公。标准明确，相对简单
@@ -497,6 +502,7 @@
 1. 目标需求模糊
 
    > 要学哪些知识？解决哪些问题？目标不明确。
+   >
    > 没有教学大纲，没人告诉你职场要学哪些科目、哪些技能。需要学习哪些东西，需要自己去寻找。
 
 2. 输入复杂，信息过载
@@ -512,6 +518,7 @@
 3. 输出标准模糊，努力方向模糊
 
    > 怎么做工作？工作做到什么程度？也没有统一的考试，知识的产出物，产出标准都是模糊的。
+   >
    > 职场人的能力，很多时候都是摸着石头过河，一步步试错总结出来的。
 
    需要掌握的能力：
@@ -543,8 +550,11 @@
 每个人的需求、环境各不相同，同样的问题，不同人的答案不一样。别人的经验只能给你做借鉴，正确的答案，只有自己尝试过才能真正了解。
 
 > 前公司有个同事和我一个宿舍。一直嚷嚷着要跟我学习Excel。
+>
 > 我说可以，等你学好了，记得吃个饭，无条件、毫无保留的教你。
+>
 > 同事说：不着急，等我看完这个电视剧，再跟你学。
+>
 > 半年后，我跳槽了，那位同事从来没有找我学习过。
 
 进入职场之后，没有人会你的学习成果打包票，也没有人给你做学习承诺。敢给你做各种承诺的人，是想让你花钱买课。
@@ -616,7 +626,9 @@
 > 2. 微信发一个号码
 > 3. 网上搜索到的号码
 > 4. 给你一张名片等等
+>
 > 这些方法过半年都会忘的一干二净，最有效的方法，就是全部统一记在【通讯录】里，找练习方式，就去【通讯录】。
+>
 > 知识管理的输入，也要又一个【通讯录】类型的统一入口。
 
 推荐使用flomo，理由如下：
@@ -639,6 +651,7 @@
 - 百度太快。找起来很方便，搜出来的就是答案。
 
 所以，做笔记的时候，不要写的太详细，别做太多的思维导图。
+
 假象一下1年后，你再来翻看笔记是下面这样，怎么快速给那时的自己，提供出更有价值的信息？
 
 ![导图](zhishi.assets/daotu.png)
