--- a/印刷知识.md
+++ b/印刷知识.md
@@ -1,6 +1,6 @@
 # 关于印刷知识
 
-## 包装印刷
+## 印刷
 
 1. **前言**
 
@@ -24,6 +24,8 @@
 
 接下来，一起通过图文的形式来看一看。
 
+### 印前工作
+
 ![包装](printing-check.assets/bz-a.jpeg)
 ![包装](printing-check.assets/bz-01.jpeg)
 ![包装](printing-check.assets/bz-02.jpeg)
@@ -33,6 +35,9 @@
 ![包装](printing-check.assets/bz-06.jpeg)
 ![包装](printing-check.assets/bz-07.jpeg)
 ![包装](printing-check.assets/bz-08.jpeg)
+
+### 印中工作
+
 ![包装](printing-check.assets/bz-b.jpeg)
 ![包装](printing-check.assets/bz-09.jpeg)
 ![包装](printing-check.assets/bz-10.jpeg)
@@ -40,6 +45,9 @@
 ![包装](printing-check.assets/bz-12.jpeg)
 ![包装](printing-check.assets/bz-13.jpeg)
 ![包装](printing-check.assets/bz-14.jpeg)
+
+### 印后工作
+
 ![包装](printing-check.assets/bz-c.jpeg)
 ![包装](printing-check.assets/bz-15.jpeg)
 ![包装](printing-check.assets/bz-16.jpeg)
@@ -51,7 +59,7 @@
 
     > 印前
     文字必须转曲或描外框；根据需求选择纸张材质；印刷文件必须设计出血；印刷文件重尺寸标注准确；线条粗细不小于0.1mm；印刷文件需为CMYK色彩；底纹色彩不低于10%；印前需做色彩校正。
-
+    
     > 印中
     油墨的质量决定耐光度;印刷色差度控制10%以内；油墨浓度可酌情加大；印刷流动度需适度；故障位置需放警示标注;供墨量、上水量需稳定状态。
 
