--- a/知识笔记.md
+++ b/知识笔记.md
@@ -836,6 +836,125 @@
 
 分类其实就是知识体系，不可能一步到位，我在做知识管理过程中，也在不断的修改、甚至完全推翻之前的分类。这是知识管理必不可少的过程。
 
+### 13、使用什么样的工具，来收集知识？
+
+使用什么样的工具，来收集知识？
+
+**提问人：** 拉登Dony
+
+用什么样的工具，来收集知识更合适呢？
+
+想找一个一步到位的，不想来回折腾了。
+
+**回答人：** 拉登老师
+
+#### 1、快速记录，越简单越好
+
+收集知识、收集笔记最简单的方法，就是**填鸭式收集。**
+
+> 想象一下，我们上学的时候，从来不需要考虑学什么？怎么做笔记？记在哪里？
+>
+> 因为学校、老师都给我们安排的明明，只要躺平等着被“填鸭”就可以了。
+
+如果每天要纠结下面这些问题，就会出现厌学情绪。
+
+- 今天学什么？
+- 学完笔记记在哪里？
+- 是纸质笔记，还是电子笔记？
+- 电子笔记用什么软件？
+- 笔记该怎么分类？用标签还是文件夹？
+- 用什么颜色来标记笔记，不同颜色代表什么含义？
+
+所以，收集笔记的首要原则：**提问人：**
+
+1. 不考虑分类
+2. 不考虑格式
+
+#### 2、记录观点，方便回看
+
+在回看自己之前的笔记时，我经常会对着笔记发呆。
+
+> 我当时为什么要收藏这个笔记？要干什么用来着？
+
+然后不知不觉10几分钟就进去了，哪怕想起来，大部分也都是没有用的信息。
+
+所以，收藏笔记的时候，要做简单备注，说明自己收藏的目的，下一步计划怎么用。
+
+描述目的越简单越好，不要增加记录的成本。**我使用的方法很简单：把笔记目标转换成一个问题。**
+
+比如：
+
+- 修改前：干货！如何对电脑文件有效归类整理
+
+- 修改后：有哪些文件整理的小技巧？
+
+比如：
+
+- 修改前：和亲戚、同学合伙做生意，人品更重要
+
+- 修改后：创业如何找到靠谱的合伙人？
+
+比如：
+
+修改前：
+
+> 哎，这里是潇潇，我积累了一套能够快速了解一个领域的组合拳，也是靠着这套底层逻辑，快速找到了适合自己的研究点。作为纯小>白，自学了画画，也产出了干货，让大家注意到了我可以说是既能学习又能赚钱，哪怕大家不做研究，平时想了解个新领域，解决一个新的问题，学习一个新技能，掌握起来也是很有用的方法了，咱们就直接开始。
+
+修改后：
+
+1. 知识类视频的文案，怎么开头？
+2. flowus管理笔记的特色功能有哪些？
+3. 如何提升自学能力？
+4. 知识类视频的文案框架是什么样的？
+
+#### 3、推荐工具：flomo
+
+尝试过多款软件后，我推荐使用flomo，原因很简单。
+
+- 够简单。就像发一条微信一样简单。
+- 多平台。在电脑、手机、网页都支持，可以让你随时随地收集知识。
+- 标准化。不在app中收藏，所有的知识都转发到flomo中，汇总后统一查看，减少信息入口。
+
+![flomo](zhishi.assets/flomo-b.png)
+
+### 14、如何使用flomo收集知识
+
+**提问人：** 拉登Dony
+
+如何使用flomo收集知识啊？
+
+**回答人：** 拉登老师
+
+下面简单介绍一下flomo的使用方法。
+
+单击下面的链接，注册flomo，具体操作就不再演示了。
+
+[v.flomoapp.com](https://v.flomoapp.com)
+
+#### 1、从app到flomo
+
+小红书、B站、抖音、公众号我都在看，但是我基本不用这些app的收藏功能了，而是【转发】【复制链接】，然后粘贴链接到flomo中去。
+
+这样就可以实现信息入口的统一。
+
+以小红书为例：点击右上角【...】,点击【复制链接】
+
+![flomo](zhishi.assets/xiao-a.png)
+
+打开flomo，粘贴复制的链接，点【发送】即可。
+
+![flomo](zhishi.assets/xiao-b.png)
+
+之后，我在电脑网页端打开flomo，进行统一的回顾和整理。
+
+#### 2、主动输入知识
+
+关注flomo的公众号【flomo浮墨笔记】，在公众号聊天对话框里，发送文字、图片或者发送语音，就可以随时随地记录自己的灵感。
+
+![flomo](zhishi.assets/xiao-c.png)
+
+在flomo的app中，也可以主动输入内容，完成灵感的记录。
+
 ## 关于学习
 
 ### 多读书
