--- a/知识笔记.md
+++ b/知识笔记.md
@@ -955,6 +955,307 @@
 
 在flomo的app中，也可以主动输入内容，完成灵感的记录。
 
+### 15、用什么方法记录笔记，更高效？
+
+**提问人：**  拉小登Dony
+
+我尝试过很多的笔记方法，比如康奈尔笔记、东京大学笔记法、卡片笔记法，都没有坚持下来。
+
+用什么方法才能坚持下来，更加有效呢？
+
+**回答人：** 拉小登老师
+
+首先要明确做笔记的目的，以后要怎么使用笔记？
+
+#### 1、用读者视角，明确笔记的目的
+
+转换成第3人视角，来阅读自己的笔记，能够更好的理清楚需求。
+
+把自己的笔记想象成是一本书，怎么判断这本书是否有用？有没有需要购买？
+
+**最简单、最快速的方法就是看目录。**
+
+> 比如下面这本书的目录，看完之后请给自己一个答案，你会去买这本书吗？
+>
+> 第一章 绪论 关于写作，你需要知道的 关于写作，你需要做的 关于写作，你需要具备的能力 关于写作，你需要注意的几个问题 第二章 有效写作的四个基本原则 写作是唯一重要的事情 简洁是最重要的 没有人完全从零开始写作 让工作推动你前进 第三章 成功写作的六个步骤 明确区分独立而又相关联的任务 阅读和理解 发展想法 分享你的洞见 养成习惯
+
+如果是我，可能不会去买，并没有告诉我：**能帮我解决什么问题？**
+
+但是，估计有不少人和我一样，在各种知识博主的推荐之下买了这本书，然后一直在书架上吃灰。
+
+这本书的名字叫做《卡片笔记写作法》。
+
+![卡片笔记写作法](zhishi.assets/kpbj.png)
+
+![卡片笔记写作法](zhishi.assets/kpbj-02.png)
+
+#### 2、像读一本书一样，去写笔记
+
+不是让你一开始就把【写书】作为记笔记的目标，太难了，还没动笔我就放弃了。
+
+而是用读书时的需求去写笔记。大部分人读书的需求有下面几个：
+
+**快速了解。**
+
+> 通过目录，快速了解图书的内容，是不是自己需要的。
+
+**阅读详情。**
+
+> 找到适合自己的章节，寻找问题的答案。
+
+写笔记，是为了未来自己翻看的时候，就像是读书一样，快速找到解决问题的方法。
+
+综上所述，笔记的方法一定要满足下面几点：
+
+##### 1、方法足够简单
+
+简单到我们不用思考，不用专门去记忆笔记的方法。
+
+从这个角度来看，康奈尔笔记法、东京大学笔记法，记笔记的规则太多，在检索问题上可能并没有优势。
+
+我总记不住这些笔记方法里的那几个模块。
+
+##### 2、需求一目了然
+
+看一眼标题就能知道这个笔记用来解决什么问题，就像是图书的大纲一样，看过之后，就大概知道要讲什么。
+
+![卡片笔记写作法](zhishi.assets/qa-bj.png)
+
+##### 3、QA笔记法
+
+最后推荐大家使用QA笔记法，非常的简单：
+
+- 一个问题。能直接的呈现出这个笔记的目的，解决什么问题。
+
+- 一个回答。简单清晰的回答问题，一个笔记就做好了。
+
+QA笔记法是最简单的思考模式，从幼儿园开始阅读《十万个为什么？》就没有任何的压力。
+
+任何时候，任何的问题，都可以用QA笔记法来做笔记。
+
+比如下面的标题笔记，修改前没有那么明确的学习目标，但是改成QA标题后，目标一下子就清晰了很多。
+
+> 修改前：一个超强的月度计划模板，彻底提高你的学习效率！
+>
+> 修改后：一个好的月计划模板，有哪些内容？
+
+更多QA笔记的用法，下一节讲解。
+
+### 16、如何使用QA笔记？
+
+**提问人：**拉小登Dony
+
+QA笔记到底怎么用啊？就提问题就可以了吗？有什么需要注意的地方？
+
+**回答人：** 拉小登老师
+
+#### 1、标题用问题描述
+
+用提问的方式，把笔记的需求和目标表达出来。可以使用下面的公式，锻炼提问的方式：
+
+问题 = 场景 + 需求
+
+比如：写笔记的时候，如何不同的符号，管理笔记分类？
+
+- 场景：写笔记的时候
+
+- 需求：使用符号管理笔记
+
+#### 2、增加疑问描述
+
+问题作为标题，在标题下面再增加具体困难的描述，让自己快速理解当时的场景。
+
+> 比如：写笔记的时候，如何不同的符号，管理笔记分类？
+>
+> 描述：看了很多视频，每个人讲的符号都不一样，写第1篇笔记还能照抄符号，写第2篇，第3篇的时候，就忘记符号的含义了。
+>
+> 有了描述，问题的场景就更加具体了。
+>
+
+#### 3、回答列要点
+
+回答要简单一点，不需要过多的思考，直接给答案。
+
+比如学姐潇潇的视频《干货🔥说白了，卷到最后都在卷自学能力》
+
+> 原始内容的大纲如下，我们可以理解为是回答。
+>
+> 1. 抓住契机
+>
+> 2. 信息为王
+>
+> 3. 对标整合
+>
+> 4. 干就完了
+>
+
+把这个大纲想象成是图书的目录，我们能获取到的信息非常的少。
+
+用QA笔记修改后，如下：
+
+![QA笔记](zhishi.assets/qa-bjbj.png)
+
+Q的部分，开门见山的表达了需求。
+
+A的部分，把方法总结为亮点，一句话说一件事，直截了当。
+
+这是的回答，显然要比之前的大纲更加明确，当你在几百份笔记中检索答案的时候，这样的笔记回看的时候，是非常的高效的！
+
+### 17、有哪些QA笔记的案例？
+
+**提问人：** 拉小登Dony
+
+有案例，可以更好的理解QA笔记的用法吗？
+
+**回答人：** 拉小登老师
+
+#### 1、案例1：一文从0到1掌握用户画像知识体系
+
+修改前的文档大纲如下：
+
+-------------------
+
+■ 1- 初识用户画像
+
+01. 1.1 用户画像
+
+02. 1.2 用户标签和用户画像
+
+03. 1.3 用户群组和用户标签
+
+-------------------
+
+■ 2- 建设标签和标签体系
+
+01. 2.1 标签的分类
+
+02. 2.2 标签建设流程
+
+-------------------
+
+■ 3- 用户画像产品化
+
+01. 3.1 用户画像产品系统架构
+
+02. 3.2 用户画像产品功能模块
+
+-------------------
+
+■ 4- 用户画像应用
+
+01. 4.1 经营分析
+
+02. 4.2 精准营销
+
+03. 4.3 个性化推荐与服务
+
+-------------------
+
+■ 5- 用户画像实践案例
+
+01. 5.1 A/B 人群效果测试
+
+02. 5.2 女神节定向营销
+
+03. 5.3 新安装未注册用户实时营销
+
+04. 5.4 某电商再营销广告
+
+-------------------
+
+■ 总结
+
+修改后：
+
+01. 数据分析常见的场景有哪些？
+
+02. 用户画像有哪两种类型
+
+03. 用户标签和用户画像有什么区别？
+
+04. 用户标签有哪几中类型？
+
+05. 什么是统计类标签？
+
+06. 什么是规则类标签
+
+07. 什么是机器学习挖掘类标签
+
+08. 建立标签体系的流程是什么样的？
+
+下面是部分问题的QA笔记截图，是不是简洁明了了很多？
+
+![案例](zhishi.assets/al-00.png)
+
+![案例](zhishi.assets/al-01.png)
+
+#### 2、案例2：看到第五条，你肯定想收藏，职场好习惯20条
+
+修改前的文章大纲如下：
+
+01. 提供明确路径。
+
+02. 给到明确标准。
+
+03. 留一点时间刻意不看屏幕。
+
+04. 每天找一个期待。
+
+05. 打电话前确认对方是否方便。
+
+06. 准备一些礼物。
+
+07. 仪容要整洁。
+
+08. 建立自己的智囊团。
+
+09. 寻找巧劲。
+
+10. 好书重复读。
+
+11. 桌面放一本便利贴。
+
+12. 擅长的要持续精进。
+
+13. 挑战来了就去应对。
+
+14. 先做减法、再做加法。
+
+15. 不要显摆。
+
+16. 保持与世界同步。
+
+17. 放手时要当机立断。
+
+18. 领导提的疑惑要解答。
+
+19. 少就是多。
+
+20. 不要在开心时候随便承诺。
+
+文章的内容写的很好，你可能提不出任何的问题，那阅读的时间就浪费掉了。
+
+换一个角度来提问，可以收获新的知识点。
+
+修改后的大纲：
+
+> 【01】有哪些常见的文章写作框架？
+>
+> 1- 清单式写作
+>
+> 2- N个妙招标题法
+>
+> 3- 直接给结论，
+>
+> 4- 平时多收集灵感
+>
+
+对应的笔记如下：
+
+![笔记](zhishi.assets/al-02.png)
+
+什么时候看，这个笔记都能给你带来收获。
+
 ## 关于学习
 
 ### 多读书
