--- a/电脑文件及文件夹管理.md
+++ b/电脑文件及文件夹管理.md
@@ -93,3 +93,41 @@
 
 - 如果是MAC电脑，安装了Alfred，只要输入 find 或 open 命令，以及待搜索的文件或目录名，列出磁盘中的相关文件，可以快速定位“访达“，相当快捷简单。也可使用系统自带的“聚焦搜索”也很方便。
 - 如果是Windows电脑一定要安装Everything，搜索文件特别快比windows电脑系统自带的快很多。
+
+## 文件命名原则
+
+### 命名原则
+
+> 文件命名的原则有三点：
+>
+> 一是方便我们阅读，我们可以直接从文件名中获得该文件是什么的有效信息。
+>
+> 二是方便软件进行分词检索，让 Alfred、Everything能更好地搜索到我们的文件。
+>
+> 最后一点，不能太麻烦，有多少人能坚持做那些明知道正确但非常麻烦的事呢！
+
+### 命名规则
+
+完整的文件名格式是这样的：
+
+`前缀(大分类)?_标题_文件属性(小分类)?_日期(版本?)&备注?.ext`
+
+假设我们给有点东西有限公司出一个项目建设方案，那我们可以将文件进行如下命名：
+
+`有点东西_东雪西送工程_建设方案_20221110(v1).doc`
+
+咋一看确实有点复杂，让我们来拆解一下！
+
+1. 首先是前缀：可选项，我们可以放某某公司、某某部门等，功能是对文件进行一个大的分类
+
+2. 然后是标题：必填项，对文件内容进行说明，例如是东雪西送工程建设方案。
+
+3. 文件属性：可选项，如果这个东雪西送工程不只有建设方案，还有推进计划，我们就可以利用这个字段进行小分类，例如：有点东西_东雪西送工程_推进计划.doc
+
+4. 然后是日期：必填项，当我们不记得文件名只对日期有一丢丢模糊的印象时，可以使用日期时间戳来缩小文件范围，不至于满磁盘乱翻。
+
+5. 版本：可选项，如果你经常被要求改方案，当你改到第十版的时候，老板说，还是第一版更好一点，你就懂得版本控制的好处了。
+
+6. 备注：可选项，用于对文件内容进行补充，大部分场景下，上面几个字段已经足够用了，我自己很少用到备注项。
+
+7. 最后说明一下连接符：除了备注使用`&`符连接之外，其余字段均使用`下横线`进行连接，方便我们阅读。
