--- a/知识笔记.md
+++ b/知识笔记.md
@@ -53,7 +53,7 @@
 > 是通过学习，丰富自己的知识储备。
 > 当你知识储备很少时，不用去做筛选，各种知识对你来说，都是一种成长，所以要做加法。
 >
->【2】减法
+> 【2】减法
 >
 > 如果一直专注研究某个领域，比如Excel、写作、金融、编程等等，专业知识的积累越来越多，这
 > 个时候要尝试做减法。
@@ -82,7 +82,7 @@
 > 比如腾讯桌面管理等软件，在桌面上对文件夹分类管理；或者给文件夹换一个颜色等等。
 >
 > 这些软件针对文件比较少的需求，可以临时应对，当你的文件多到几百上千个，桌面放不开的时候，这些方法还是治标不治本。
->
+
 最好的方法，还是清单管理。
 
 ![笔记](zhishi.assets/bj.png)
@@ -138,7 +138,6 @@
 > - 用什么棋子，可以吃掉哪些棋子？
 > - 没个棋子怎么走？
 > - 有哪些下期的常用技巧？
->
 
 知识管理，就是管理你掌握的知识，这些知识就像是象棋中的“棋子”。
 
@@ -452,18 +451,19 @@
    > 小学、初中、高中的时候，学习目标、教学大纲非常清晰，都是固定的科目：语数英、物理、化学、生物、地理、历史政治。
    >
    > 按照教学大纲一步步的学习即可。
-
+   >
 2. 输入简单，被动思考
 
    > 学生不同思考要学什么，按照老师教的、书上写的，被动的填鸭式的学习。
    >
    > 不需要动脑思考的问题，都是简单的体力劳动，实现起来难度不大。
-
+   >
 3. 输出标准明确，努力方向清晰且单一
 
    > 无论什么年代，什么地方，上学的输出结果明确、非常统一，就是高考！
    >
    > 努力的方向也非常清晰，尽可能掌握固定科目的所有内容，正确回答试卷中的问题。
+   >
 
 需要掌握的能力
 
@@ -474,19 +474,20 @@
 
 1. 目标清晰
 
-   >目标依然非常清晰，按照教学大纲学习、考试、毕业。
-
+   > 目标依然非常清晰，按照教学大纲学习、考试、毕业。
+   >
 2. 输入困难，资源较少
 
    > 从小学到高中，有9年的时间，学习的都是相关的科目，语数英、物理、化学、地理。2022年全国的中小学生共计月1亿人，各种学习资料，琳琅满目。
    >
    > 大学只有4年，2022年大学毕业生1000万人，学习的科目从来都没接触过，都是细分的领域，资源相对也少很多，学习难度也难度大一些。
-
+   >
 3. 输出标准明确，但是方向更多
 
    > 考试、毕业依然是大学生最基本的目标。也是最简单、最单一的目标。
    >
    > 相比中小学，大学毕业的下一个阶段，会有不同的努力方向。
+   >
 
    1. 考研，考公。标准明确，相对简单
    2. 工作。标准模糊，要学哪些知识？用这些知识解决什么问题？应聘哪些工作？都非常的模糊。大部分人在毕业哪一年才思考这些问题。
@@ -504,22 +505,22 @@
    > 要学哪些知识？解决哪些问题？目标不明确。
    >
    > 没有教学大纲，没人告诉你职场要学哪些科目、哪些技能。需要学习哪些东西，需要自己去寻找。
-
+   >
 2. 输入复杂，信息过载
 
    没有固定的教材，固定的教学大纲，学习的信息来源非常复杂：
 
-      1. 跟公司文件学习。新员工入职培训之类的学习。
-      2. 跟同事、领导、客户学习。在事儿上总结学习。
-      3. 通过网络学习。抖音、小红书等各种渠道学习。
+   1. 跟公司文件学习。新员工入职培训之类的学习。
+   2. 跟同事、领导、客户学习。在事儿上总结学习。
+   3. 通过网络学习。抖音、小红书等各种渠道学习。
 
    信息太杂，太多，让人无从下手。不断的收藏吃灰。
-
 3. 输出标准模糊，努力方向模糊
 
    > 怎么做工作？工作做到什么程度？也没有统一的考试，知识的产出物，产出标准都是模糊的。
    >
    > 职场人的能力，很多时候都是摸着石头过河，一步步试错总结出来的。
+   >
 
    需要掌握的能力：
 
@@ -669,7 +670,7 @@
 
 1. **Q问题。** 每个知识点，都转换成一个问题，总结知识点的价值，能解决什么问题？
 2. **A答案。** 每个问题下面都跟着答案，1234条，看到总结的小标题，就明白解决的大致方法了。
-后面会再详细的讲解。
+   后面会再详细的讲解。
 
 ### 12、快速收集知识的案例有哪些？
 
@@ -704,21 +705,17 @@
 >
 > 渡边君:“是！”转身要走。
 >
->
 > **第二遍:** 管理者:“别着急，回来。麻烦你重复一遍。”
 >
 > 渡边君:“你是让我去做✘✘事对吗？这次我可以走了吗？”
->
 >
 > **第三遍:** 管理者:“你觉得我让你做这事的目的是什么？”
 >
 > “你让我做这事的目的大概是咱们这次能够顺利地召开培训，这次我可以走了吗？”
 >
->
 > **第四遍:** 管理者:“别着急，你觉得做这件事会遇到什么意外？遇到什么情况你需要向我汇报，遇到什么情况你可以自己做决定？”
 >
 > 渡边君:“这件事大概有这么几种情况……如果遇到A情况我向您汇报，如果遇到B情况我自己做决定。您看可以吗？”
->
 >
 > **最后一遍:** 管理者:“如果让你自己做这个事，你有什么更好的想法和建议吗？”
 >
@@ -741,8 +738,8 @@
 不断的重复提问，这个问题就变成了一个明确的研究目标方向，在思考和检索的时候，都可以快速唤起你的记忆。
 
 下面是【如何把100字写成1000字】这个问题的积累，让在写作上轻松的迈出第1步。
->
->【01】15- 如何把100字写成1万字？又不显得啰嗦？
+
+> 【01】15- 如何把100字写成1万字？又不显得啰嗦？
 >
 > 1. 给出结论，勾勒正面影响画面。
 > 2. 列举反例，勾勒不好的画面。
@@ -750,18 +747,18 @@
 > 4. 善用排比句，让人感觉说的很对
 > 5. 学会要赞
 >
->【02】16- 如何把100字写成1000字
+> 【02】16- 如何把100字写成1000字
 >
 > 1. 整理文档大纲，罗列清单
 > 2. 分类整理大纲，梳理逻辑
 > 3. 电影时演绎大纲模块
 >
->【03】17- 如何把100字写成1000字
+> 【03】17- 如何把100字写成1000字
 >
 > 1. 偷换概念，把问题作为答案展开说明，对答案闭口不提
 > 2. 多说正确的废话，把好的事务都写上
 >
->【04】19- 如何把100字写成1000字？
+> 【04】19- 如何把100字写成1000字？
 >
 > 1. 善用心理学的专业术语
 > 2. 举例联想
@@ -813,7 +810,6 @@
    给不同的分类建立对应的文件夹，是我们平时最常用的方法。
 
    ![分类](zhishi.assets/fl.png)
-
 2. 在名称中分类
 
    比如【如何把100字写成1000字】这个问题，其实就是在文件、笔记名称中做了分类的标记。
@@ -821,12 +817,11 @@
    后续通过筛选，可以快速找出这些分类。
 
    ![筛选](zhishi.assets/sx.png)
-
 3. 添加分类列
 
    我习惯用表格来管理文件，所以会添加辅助列，来备注笔记的【分类】。
 
-    ![表格](zhishi.assets/bg.png)
+   ![表格](zhishi.assets/bg.png)
 
 通过这些分类，可以更方便的进行多维度的分类管理。
 
@@ -885,13 +880,11 @@
 比如：
 
 - 修改前：干货！如何对电脑文件有效归类整理
-
 - 修改后：有哪些文件整理的小技巧？
 
 比如：
 
 - 修改前：和亲戚、同学合伙做生意，人品更重要
-
 - 修改后：创业如何找到靠谱的合伙人？
 
 比如：
@@ -1026,7 +1019,6 @@
 最后推荐大家使用QA笔记法，非常的简单：
 
 - 一个问题。能直接的呈现出这个笔记的目的，解决什么问题。
-
 - 一个回答。简单清晰的回答问题，一个笔记就做好了。
 
 QA笔记法是最简单的思考模式，从幼儿园开始阅读《十万个为什么？》就没有任何的压力。
@@ -1058,7 +1050,6 @@ QA笔记到底怎么用啊？就提问题就可以了吗？有什么需要注意
 比如：写笔记的时候，如何不同的符号，管理笔记分类？
 
 - 场景：写笔记的时候
-
 - 需求：使用符号管理笔记
 
 #### 2、增加疑问描述
@@ -1070,7 +1061,6 @@ QA笔记到底怎么用啊？就提问题就可以了吗？有什么需要注意
 > 描述：看了很多视频，每个人讲的符号都不一样，写第1篇笔记还能照抄符号，写第2篇，第3篇的时候，就忘记符号的含义了。
 >
 > 有了描述，问题的场景就更加具体了。
->
 
 #### 3、回答列要点
 
@@ -1081,13 +1071,9 @@ QA笔记到底怎么用啊？就提问题就可以了吗？有什么需要注意
 > 原始内容的大纲如下，我们可以理解为是回答。
 >
 > 1. 抓住契机
->
 > 2. 信息为王
->
 > 3. 对标整合
->
 > 4. 干就完了
->
 
 把这个大纲想象成是图书的目录，我们能获取到的信息非常的少。
 
@@ -1113,75 +1099,59 @@ A的部分，把方法总结为亮点，一句话说一件事，直截了当。
 
 修改前的文档大纲如下：
 
--------------------
+---
 
 ■ 1- 初识用户画像
 
-01. 1.1 用户画像
+1. 1.1 用户画像
+2. 1.2 用户标签和用户画像
+3. 1.3 用户群组和用户标签
 
-02. 1.2 用户标签和用户画像
-
-03. 1.3 用户群组和用户标签
-
--------------------
+---
 
 ■ 2- 建设标签和标签体系
 
-01. 2.1 标签的分类
+1. 2.1 标签的分类
+2. 2.2 标签建设流程
 
-02. 2.2 标签建设流程
-
--------------------
+---
 
 ■ 3- 用户画像产品化
 
-01. 3.1 用户画像产品系统架构
+1. 3.1 用户画像产品系统架构
+2. 3.2 用户画像产品功能模块
 
-02. 3.2 用户画像产品功能模块
-
--------------------
+---
 
 ■ 4- 用户画像应用
 
-01. 4.1 经营分析
+1. 4.1 经营分析
+2. 4.2 精准营销
+3. 4.3 个性化推荐与服务
 
-02. 4.2 精准营销
-
-03. 4.3 个性化推荐与服务
-
--------------------
+---
 
 ■ 5- 用户画像实践案例
 
-01. 5.1 A/B 人群效果测试
+1. 5.1 A/B 人群效果测试
+2. 5.2 女神节定向营销
+3. 5.3 新安装未注册用户实时营销
+4. 5.4 某电商再营销广告
 
-02. 5.2 女神节定向营销
-
-03. 5.3 新安装未注册用户实时营销
-
-04. 5.4 某电商再营销广告
-
--------------------
+---
 
 ■ 总结
 
 修改后：
 
-01. 数据分析常见的场景有哪些？
-
-02. 用户画像有哪两种类型
-
-03. 用户标签和用户画像有什么区别？
-
-04. 用户标签有哪几中类型？
-
-05. 什么是统计类标签？
-
-06. 什么是规则类标签
-
-07. 什么是机器学习挖掘类标签
-
-08. 建立标签体系的流程是什么样的？
+1. 数据分析常见的场景有哪些？
+2. 用户画像有哪两种类型
+3. 用户标签和用户画像有什么区别？
+4. 用户标签有哪几中类型？
+5. 什么是统计类标签？
+6. 什么是规则类标签
+7. 什么是机器学习挖掘类标签
+8. 建立标签体系的流程是什么样的？
 
 下面是部分问题的QA笔记截图，是不是简洁明了了很多？
 
@@ -1193,44 +1163,25 @@ A的部分，把方法总结为亮点，一句话说一件事，直截了当。
 
 修改前的文章大纲如下：
 
-01. 提供明确路径。
-
-02. 给到明确标准。
-
-03. 留一点时间刻意不看屏幕。
-
-04. 每天找一个期待。
-
-05. 打电话前确认对方是否方便。
-
-06. 准备一些礼物。
-
-07. 仪容要整洁。
-
-08. 建立自己的智囊团。
-
-09. 寻找巧劲。
-
+1. 提供明确路径。
+2. 给到明确标准。
+3. 留一点时间刻意不看屏幕。
+4. 每天找一个期待。
+5. 打电话前确认对方是否方便。
+6. 准备一些礼物。
+7. 仪容要整洁。
+8. 建立自己的智囊团。
+9. 寻找巧劲。
 10. 好书重复读。
-
 11. 桌面放一本便利贴。
-
 12. 擅长的要持续精进。
-
 13. 挑战来了就去应对。
-
 14. 先做减法、再做加法。
-
 15. 不要显摆。
-
 16. 保持与世界同步。
-
 17. 放手时要当机立断。
-
 18. 领导提的疑惑要解答。
-
 19. 少就是多。
-
 20. 不要在开心时候随便承诺。
 
 文章的内容写的很好，你可能提不出任何的问题，那阅读的时间就浪费掉了。
@@ -1248,13 +1199,128 @@ A的部分，把方法总结为亮点，一句话说一件事，直截了当。
 > 3- 直接给结论，
 >
 > 4- 平时多收集灵感
->
 
 对应的笔记如下：
 
 ![笔记](zhishi.assets/al-02.png)
 
 什么时候看，这个笔记都能给你带来收获。
+
+### 18、整理知识的目标是什么？为什么要整理？
+
+**提问人：** 拉小登Dony
+
+整理知识的目标，前面不是说了很多次了吗？怎么这里又说？
+
+**回答人：** 拉小登老师
+
+前面有讲解知识整理（或者知识管理）的目的，是为了快速的找到合适的知识，来解决当前的问题。
+
+这一节对如何快速找到知识做了细分，明确整理知识的结果，让知识管理更加落地。具体可以分成下面2种方式：
+
+- 按照路径查找
+- 快速搜索查找
+
+---
+
+#### 按照路径查找
+
+把知识管理想象成是一个图书馆，为了找到我们需要的图书，可能需要依次找到：
+
+1. 楼栋。我们要看的图书分类，在那栋楼里？
+2. 楼层。具体在那层楼？
+3. 区域。在这层楼的哪个地方？
+4. 书架。在哪个书架上？
+5. 位置。图书在书架上的位置是什么？
+
+从大的方位，逐步的细化到具体的位置，去检索查找某个知识。用我们更熟悉的词语描述就是【知识体系】。
+
+【思维导图】是用来梳理知识体系非常好用的工具，比如这个专栏的初稿，我就是在思维导图里梳理出来的。
+
+![思维导图](zhishi.assets/5677c391b845c0c3f956111143c617af.png)
+
+但是，思维导图只是【图书馆建设】的图纸，我们还要用砖瓦把知识体系，实际的建设起来。常用的方法有下面两种：
+
+- 文件夹整理
+
+文件夹是最常见的方式，从楼栋、楼层、区域、书架、位置一层一层的细化，就对应我们建立的不同层级的文件夹。
+
+![名称编码](zhishi.assets/5b52cc3bbeaf62b705383ce22786b682.png)
+
+这样知识（笔记、文件）的层次结构非常的清晰。
+
+不过如果文件夹的分类比较多，上面的方法在检索文件时，可能效率非常低，每次都要反复的打开各个文件夹，来查找信息。
+
+- 名称编码规则
+
+把知识的结构信息，转换成对应的编码，写在文件的标号，或者文件名称里；所有的文件，在同一目录清单中，检索的效率会高一些。
+
+至少不用反复的查看不同的文件夹、子文件夹。
+
+下面是生产管理中，常见的编码规则，每个数字、每个符号都有专属的含义。
+
+![名称编码](zhishi.assets/09ac2e3860d94da621bcb3a5c4ed27d1.png)
+
+这样做有几个好处：
+
+   1. 避免文件夹不断的嵌套，所有的文件在一个列表中，一览无余。
+
+   2. 通过排序的方法，可以把相关的编码排序到一起，信息自动就完成了分类整理。
+
+也有人，会把这两套方法结合到一起，给每一层文件夹设置不同的编码，这类现象在笔记软件中尤为常见，是知识类博主的习惯用法。
+
+![印象笔记](zhishi.assets/103a7ca9c40a218db538e42e39a3ae35.png)
+
+但是使用这个方法之前，一定要注意，可能会出现下面的问题：
+
+   1. 编码复杂，总是记不住，给文件加编号变成了很大的负担。
+
+   2. 分类强迫症，总是不知道笔记放在哪个文件夹，出现分类选择困难。
+
+以上两种方法，通过不同的形式，梳理出了笔记的层次结构、完整路径。
+
+> 这个层次结构本身是一种信息的汇总、聚合，只要找到找个文件夹，就可以找到同类型的内容。
+
+顺着路径，就能快速找到需要的知识、笔记。
+
+---
+
+#### 快速搜索查找
+
+按路径查找，首先需要我们大脑中有一个完整的体系，清晰的知道【图书馆】的布局，显然这不是新手具备的技能。
+
+相信大部分人使用【Ctrl+F】查找的方式会更多。搜索的方式又可以分为两种：
+
+ **1- 按名称搜索** ，everything
+
+按照名称搜索文件，可以使用everything之类的软件，提升搜索效率。
+
+![everything](zhishi.assets/4f93af5535f65c111463759f6913198c.png)
+
+ **2-按照笔记内容搜索** ，anytxt
+
+搜索的关键字，没有出现在笔记标题中，需要对笔记全文搜索。
+
+> 比如在员工人事清单里，搜索某个人的信息
+
+大部分的笔记软件都支持这个功能，比如石墨笔记、语雀、flowus、飞书等等。
+
+如果是本地的文件，比如Word、Excel，可以使用anytxt，进行本地文件全文搜索。
+
+![anytxt](zhishi.assets/71aa99999568d56cd4d2a1acd60a04a3.png)
+
+效率和everything一样高效。
+
+> 未来可能还会有更多的搜索方式。
+>
+> 比如按照图片搜索，也就是搜索文字的时候，可以识别出图片里的文字，目前语雀好像已经支持了类似功能，感兴趣的同学，可以去试试。
+
+两种方式各有千秋。
+
+- 按路径查找。可以更系统、全面的搭建知识体系，但是检索速度慢。
+- 按搜索查找。更快的检索内容，但是信息相对比较零散，尤其是本地的文件、笔记。
+
+那么如何更好的做知识管理，更好的提高效率呢？下一节再聊！
 
 ## 关于学习
 
@@ -1490,17 +1556,11 @@ A的部分，把方法总结为亮点，一句话说一件事，直截了当。
 ### 活在未来，而不是当下
 
 1. 你对未来有个预测；
-
 2. 那个预测需要时间才能得到结果；
-
 3. 你笃信你的预测是正确的；
-
 4. 于是你提前按照那个预测的结果行动，选择，思考；
-
 5. 你终将走到那个结果出现的时刻；
-
 6. 最终你的预测是正确的；
-
 7. 那么，由于你提前按未来正确的结果行动、选择、思考，于是，在相当长一段时间里，你的生活中的一部分，就是“活在未来”的。（来自新东方某老师）巴菲特因为对股票、公司有了很深地研究，他有足够的信心判断只有时间足够长，价格终将回到公司的实际价值，所以他才能靠投资成为首富级别的人物。所以说巴菲特是一个活在未来的人。
 
    PS：其实我也是这样的人，哈哈。。。
@@ -1655,7 +1715,6 @@ A的部分，把方法总结为亮点，一句话说一件事，直截了当。
 28. 不要在深夜做一个重要的决定，很容易后悔，大多数人深夜是非常脆弱的，很容易产生极端的想法。
 29. 真正的醒悟，是需要实实在在的经历的。
 30. 有机会帮助别人时，尽量多帮助别人，不求回报。人生，都是不断在结缘。结善缘，得善果。今天你帮了他，明天他又可能帮了你。积善之家必有余庆。
-
 31. 当一个人
 
 - 当一个人去追求生活的必需品的时候，他往往是勤奋和勇敢的。
