--- a/电脑文件及文件夹管理.md
+++ b/电脑文件及文件夹管理.md
@@ -131,3 +131,24 @@
 6. 备注：可选项，用于对文件内容进行补充，大部分场景下，上面几个字段已经足够用了，我自己很少用到备注项。
 
 7. 最后说明一下连接符：除了备注使用`&`符连接之外，其余字段均使用`下横线`进行连接，方便我们阅读。
+
+- 软件派
+Clover
+Qttab
+Fences
+
+- 搜索派
+Everything
+
+- 体系派
+分类
+
+- 表格派
+
+文件管理目标
+1.快速访问
+2.分类管理
+
+问题点：
+分类太多
+路径太长
